Update template structure for multiple pages
Removed base.html extension, added static files loading, incorporated inner-header.html and footer.html includes into multiple pages with a conditional check for authenticated users. Changes better organize the code and improve readability and user access control.

--- a/website/templates/inner-header.html
+++ b/website/templates/inner-header.html
@@ -33,7 +33,7 @@
     </script>
 </head>
 
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top header-inner-pages">
