--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -14,43 +14,38 @@
         </div>
       </div>
 
-
-
-      <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
-        <div class="col-xl-6 col-md-6">
-          <div class="icon-box">
-            <form class="d-flex w-100" method="POST" action="{% url 'job_search' %}">
-              {% csrf_token %}
-              <div class="container">
-                <div class="row mb-3">
-                  <div class="col-md-4">
-                    <input class="form-check-input" type="checkbox" name="recruiter">
-                        <label class="form-check-label text-white">
-                            Search users
-                        </label>
-                  </div>
-                  <div class="col-md-8">
-                    <input class="form-check-input" type="checkbox" name="recruiter">
-                        <label class="form-check-label text-white">
-                            Search Job Listings
-                        </label>
-                  </div>
+      <div class="row gy-3 mt-3 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
+      <div class="col-xl-6 col-md-6">
+        <div class="icon-box">
+          <form method="POST" action="{% url 'job_search' %}">
+            {% csrf_token %}
+           <!-- removing this fixes the large space on top <div class="container">-->
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <input class="form-check-input" type="checkbox" name="searchUsers" id="searchUsers">
+                  <label class="form-check-label text-white" for="searchUsers">
+                    Search users
+                  </label>
                 </div>
-                <div class="row">
-                  <div class="col-md-12 d-flex">
-                    <input class="form-control mx-2" type="text" name="query" placeholder="I am looking for python remote positions" />
-                    <div class="tech-search-form"><button type="submit">Search</button></div>
-                  </div>
+                <div class="col-md-8">
+                  <input class="form-check-input" type="checkbox" name="searchJobs" id="searchJobs">
+                  <label class="form-check-label text-white" for="searchJobs">
+                    Search Job Listings
+                  </label>
                 </div>
-
               </div>
-            </form>
-          </div>
+              <div class="row">
+                <div class="col-md-12 d-flex">
+                  <input class="form-control mx-2" type="text" name="query" id="query" placeholder="I am looking for python remote positions" />
+                  <label for="query"></label>
+                  <div class="tech-search-form"><button type="submit">Search</button></div>
+                </div>
+              </div>
+           <!-- </div>-->
+          </form>
         </div>
       </div>
-
-
-
+    </div>
 
     </div>
   </section><!-- End Hero -->
