--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -17,18 +17,18 @@
       <div class="row gy-3 mt-3 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
       <div class="col-xl-6 col-md-6">
         <div class="icon-box">
-          <form method="POST" action="{% url 'job_search' %}">
+          <form method="POST" action="{% url 'main_search' %}">
             {% csrf_token %}
            <!-- removing this fixes the large space on top <div class="container">-->
               <div class="row mb-3">
-                <div class="col-md-4">
-                  <input class="form-check-input" type="checkbox" name="searchUsers" id="searchUsers">
+                <div class="col-md-3">
+                  <input class="form-check-input" type="radio" name="searchType" value="userSearch" id="searchUsers" checked>
                   <label class="form-check-label text-white" for="searchUsers">
                     Search users
                   </label>
                 </div>
-                <div class="col-md-8">
-                  <input class="form-check-input" type="checkbox" name="searchJobs" id="searchJobs">
+                <div class="col-md-4">
+                  <input class="form-check-input" type="radio" name="searchType" value="jobSearch" id="searchJobs">
                   <label class="form-check-label text-white" for="searchJobs">
                     Search Job Listings
                   </label>
