Update website templates
The templates for user listings and home on the techlister website have been updated. For user listings, the code now includes a static file and an inner header, as well as a footer. The home template has been updated to change the placeholder text for the search input field, aiming to improve user experience.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -36,7 +36,11 @@
               </div>
               <div class="row">
                 <div class="col-md-12 d-flex">
-                  <input class="form-control mx-2" type="text" name="query" id="query" placeholder="I am looking for python remote positions" />
+                  <input class="form-control mx-2"
+                         type="text"
+                         name="query"
+                         id="query"
+                         placeholder="I am looking for python developers" />
                   <label for="query"></label>
                   <div class="tech-search-form"><button type="submit">Search</button></div>
                 </div>
