--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% block content %}
+{% load static %}
+{% include 'inner-header.html' %}
 <div class="container">
     <div class="row">
         <div class="col-md-4">
@@ -163,4 +163,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% include 'footer.html' %}
