Add restricted access page and improve user data privacy
A restricted access page was added to handle unauthorized access attempts. All parts of the site that previously just checked if a user was authenticated have been updated to also check if the request user is authorized to access or manage a particular resource. This enhancement significantly improves user data privacy throughout the site.

--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -26,7 +26,7 @@
                                 {% for appl in applied %}
                                 <tr>
                                     <td>{{ appl.user_id__first_name }} {{ appl.user_id__last_name }}</td>
-                                    <td>{{ appl.job__title }} {{ appl.user_id__first_name }}</td>
+                                    <td>{{ appl.job__title }}</td>
                                     <td>{{ appl.job__company }}</td>
                                     <td class="text-center">
                                         <a href="{% url 'view_cover_letter' appl.job_id appl.user_id %}">
