--- a/website/templates/user_login.html
+++ b/website/templates/user_login.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% include 'inner-header.html' %}
-<div class="container inner-top-margin">
+<div class="container">
   <div class="row justify-content-center mb-4">
     <div class="col-md-3">
       <div class="card">
