Update UI and add initial database migration
Adjusted the UI layout on login, registration, and header templates to improve user experience. Added conditionals for user or recruiter in the header. Created initial database models and corresponding migrations to establish the back-end structure.

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -44,7 +44,12 @@
           <!-- Button section. -->
           <div class="d-flex">
               {% if user.is_authenticated %}
-              <a href="{% url 'user_profile' %}" class="get-started-btn scrollto" style="margin-right: 10px">Profile</a>
+                {% if request.session.recruiter == False %}
+                  <a href="{% url 'user_profile' %}" class="get-started-btn scrollto" style="margin-right: 10px">Profile</a>
+                {% endif %}
+                {% if request.session.recruiter == True %}
+                <a href="{% url 'recruiter_profile' %}" class="get-started-btn scrollto" style="margin-right: 10px">Profile</a>
+        {% endif %}
               <a href="{% url 'logout' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Logout</a>
               {% else %}
               <a href="{% url 'login_page' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Login</a>
