--- a/website/templates/inner-header.html
+++ b/website/templates/inner-header.html
@@ -68,7 +68,7 @@
   </div>
 
 </header><!-- End Header -->
-
+<div class="inner-top-margin"></div>
 {% if user.is_authenticated %}
   {% if request.session.recruiter == False %}
       {% include 'user_navbar.html' %}
