--- a/website/templates/recruiter_navbar.html
+++ b/website/templates/recruiter_navbar.html
@@ -1,5 +1,5 @@
 
-<div class="container px-4 text-center inner-top-margin">
+<div class="container px-4 text-center">
 <nav class="profile-navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
