Update restricted access, email verification, and form styling
The restricted access page, email verification success, and failure pages have been updated with a more direct login form. Permission checks have been added on the deletion of job skills in views.py. Styling for button elements in 'add_experience' and 'add_portfolio' templates has been improved for better usability. Minor modifications in job skill creation and several page redirects have been implemented.

--- a/website/templates/add_experience.html
+++ b/website/templates/add_experience.html
@@ -2,7 +2,7 @@
 {% include 'inner-header.html' %}
 {% if user.is_authenticated %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Add Experience</h1>
             <form method="POST" action="{% url 'add_experience' %}">
@@ -84,7 +84,9 @@
                 <div class="mb-3">
                     {{ form.task_ten }}
                 </div>
-                <button type="submit" class="btn btn-secondary">Save</button>
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn md-yellow-button">Save</button>
+                </div>
             </form>
         </div>
     </div>
