--- a/website/templates/email_verification_failure.html
+++ b/website/templates/email_verification_failure.html
@@ -2,8 +2,14 @@
 {% include 'inner-header.html' %}
 
 <div class="inner-top-margin">
-    Your email verification has failed.<br />
-    Please contact us at techartisanhub@gmail.com
+<div class="container">
+  <div class="row justify-content-center mb-4">
+    <div class="col-md-4">
+        <p>Something has gone wrong with your email verification.</p>
+        <p>Please us our contact form and submit a support ticket. Include your email and user name.</p>
+    </div>
+  </div>
+</div>
 </div>
 
 {% include 'footer.html' %}
