--- a/website/templates/add_portfolio.html
+++ b/website/templates/add_portfolio.html
@@ -32,8 +32,8 @@
                         {% endfor %}
                     </div>
 
-                    <div>
-                        <button type="submit" class="btn btn-secondary">Save</button>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn md-yellow-button">Save</button>
                     </div>
                 </form>
         </div>
