--- a/website/templates/users/applied_jobs.html
+++ b/website/templates/users/applied_jobs.html
@@ -18,6 +18,7 @@
                       <th scope="col">State</th>
                       <th scope="col">Location</th>
                       <th scope="col" class="text-center">View</th>
+                      <th scope="col" class="text-center">Delete</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -31,6 +32,11 @@
                       <td class="text-center">
                           <a href="{% url 'all_view_job' applied.job.id %}">
                               <button type="button" class="btn md-yellow-button">View</button>
+                          </a>
+                      </td>
+                      <td class="text-center">
+                          <a href="{% url 'remove_applied_job' applied.job.id %}">
+                              <button class="btn btn-danger" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove</button>
                           </a>
                       </td>
                   </tr>
