Refactor JobListing model and related components to use 'description' field
Reconfigured the JobListing model in the application to replace 'about', 'responsibilities', 'qualifications', and 'benefits' fields with a single 'description' field. Updated all affected templates, forms, queries, and scripts to support this change. This simplification enhances manageability and potential user experience.

--- a/website/templates/add_joblisting.html
+++ b/website/templates/add_joblisting.html
@@ -69,23 +69,11 @@
                         {{ form.pay_top }}
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">About</label>
-                        {{ form.about }}
-                        {% for error in form.about.errors %}
+                        <label class="form-label">Description</label>
+                        {{ form.description }}
+                        {% for error in form.description.errors %}
                         <span class="text-danger">{{ error }}</span>
                         {% endfor %}
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Responsibilities</label>
-                        {{ form.responsibilities }}
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Qualifications</label>
-                        {{ form.qualifications }}
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Benefits</label>
-                        {{ form.benefits }}
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn lg-button-yellow">Save</button>
