--- a/website/templates/skill_search.html
+++ b/website/templates/skill_search.html
@@ -7,10 +7,10 @@
                     <div class="container text-center">
                       <div class="row">
                         <div class="col">
-                          {{ skill.skill }}
+                          {{ skill.name }}
                         </div>
                         <div class="col">
-                            <form action="{% url 'add_user_skill' skill.pk skill.skill %}" method="POST">
+                            <form action="{% url 'add_user_skill' skill.pk skill.name %}" method="POST">
                                 {% csrf_token %}
                                 <div class="col">
                                     <button type="submit"
