--- a/website/templates/user_page/resume.html
+++ b/website/templates/user_page/resume.html
@@ -2,6 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-9 mt-3"> <!-- Left Column, 25% -->
+        <div id="new-message"></div>
       <h5>Skill Set</h5>
       <div class="card-body">
           <div class="container">
@@ -105,7 +106,17 @@
                             hx-target="#saved-user"
                             hx-swap="innerHTML"
                             class="btn btn-primary"
-                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Resume</button>
+                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        Save Resume</button>
+                    </div>
+                    <div class="mt-2">
+                    <button
+                            hx-get="{% url 'new_message' %}"
+                            hx-target="#new-message"
+                            hx-swap="innerHTML"
+                            class="btn btn-primary"
+                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        Message User</button>
                     </div>
                     {% endif %}
                 {% endif %}
