--- a/messaging/templates/new_message.html
+++ b/messaging/templates/new_message.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="row mb-5 justify-content-center">
             <h3>New Message</h3>
-                <form method="POST" action="#">
+        <div id="message-sent"></div>
+        <form hx-post="{% url 'new_message' 8 %}" hx-trigger="submit">
+                <form hx-post="{% url 'new_message' 8 %}">
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.subject }}
@@ -16,7 +18,11 @@
                         {% endfor %}
                     </div>
                     <div class="d-flex justify-content-end">
-                        <button type="submit" class="btn md-yellow-button">Send</button>
+                        <button
+                                hx-target="#message-sent"
+                                hx-swap="innerHTML"
+                                class="btn md-yellow-button">Send
+                        </button>
                     </div>
                 </form>
     </div>
