--- a/website/templates/user_page/resume.html
+++ b/website/templates/user_page/resume.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="mt-2">
                     <button
-                            hx-get="{% url 'new_message' %}"
+                            hx-get="{% url 'new_message' pii.user.id %}"
                             hx-target="#new-message"
                             hx-swap="innerHTML"
                             class="btn btn-primary"
