Update messaging functionality and user interfaces
Enhanced the messaging system by restructuring the new message function, and introduced the view message function. Front-end interfaces have been updated to make use of these additions. Also, minor fixes and clean up were made in several parts of the codebase, such as renaming parameters and improving code comments.

--- a/messaging/templates/new_message.html
+++ b/messaging/templates/new_message.html
@@ -2,8 +2,7 @@
     <div class="row mb-5 justify-content-center">
             <h3>New Message</h3>
         <div id="message-sent"></div>
-        <form hx-post="{% url 'new_message' 8 %}" hx-trigger="submit">
-                <form hx-post="{% url 'new_message' 8 %}">
+        <form hx-post="{% url 'new_message' user_id %}" hx-trigger="submit">
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.subject }}
