--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -5,4 +5,5 @@ This is the message view.
 This is the message view.
 This is the message view.
 This is the message view.
+<button onClick="document.getElementById('message-row-28').innerHTML = '';">Close</button>
 </td>
