--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -14,7 +14,7 @@
                       <th scope="col">From</th>
                       <th scope="col">Subject</th>
                       <th scope="col" class="text-center">View</th>
-                      <th scope="col" class="text-center">Remove</th>
+                      <th scope="col" class="text-center">Delete</th>
                   </tr>
                   </thead>
                   <tbody>
