Add message deletion functionality and style updates
This commit introduces a feature to delete individual messages. A new `delete_message` function is added in the `views.py`, along with a corresponding route in `urls.py`. Error handling for non-existing messages is also implemented. Additionally, UI improvements include the addition of the `md-red-button` CSS class and changes to button placement in the HTML templates.

--- a/messaging/templates/messages/message-deleted.html
+++ b/messaging/templates/messages/message-deleted.html
@@ -1,5 +1,5 @@
-<td colspan="2">
-{{ message.body }}
+<td colspan="2" class="alert alert-danger" role="alert">
+Message has been deleted
 </td>
 <td class="text-center">
     <button class="btn md-yellow-button"
