Update message deletion response and button
Modified message deletion response in views.py to return an empty HttpResponse. The unnecessary JavaScript deletion action in the previous HttpResponse has been removed. The structure of the delete button in user_profile.html has been altered for improved readability and to seamlessly cooperate with the backend changes.

--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -32,12 +32,11 @@
                       </td>
                       <td class="text-center">
                           <button
-                                  hx-get="{% url 'delete_message' message.id %}"
-                                  hx-target="#message-row-{{ message.id }}"
-                                  hx-confirm="Are you sure you want to delete this message?"
-                                  hx-swap="outerHTML"
-                                  class="btn md-red-button">Delete
-                          </button>
+                             hx-get="{% url 'delete_message' message.id %}"
+                             hx-confirm="Are you sure you want to delete this message?"
+                             hx-target="#message-row-{{ message.id }}"
+                             hx-swap="outerHTML"
+                             class="btn md-red-button">Delete</button>
                       </td>
                   </tr>
                   <tr id="message-row-{{ message.id }}"></tr>
