Update message view layout
Modified the layout of the message view template in techlister's messaging application. The updates include added horizontal rule, paragraph tag for body and flexbox for better alignment of the Close and Reply buttons.

--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -1,11 +1,16 @@
-<td colspan="2">
-{{ message.body }}
-</td>
-<td class="text-center">
-    <button class="btn md-yellow-button"
-            onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Close</button>
-</td>
-<td class="text-center">
-    <button class="btn md-yellow-button"
-            onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Reply</button>
+<td>
+    <hr />
+    <p>
+        {{ message.body }}
+    </p>
+    <div class="d-flex justify-content-end">
+        <div class="">
+            <button class="btn md-yellow-button"
+                    onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Close</button>
+        </div>
+        <div class="mx-3">
+            <button class="btn md-yellow-button"
+                    onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Reply</button>
+        </div>
+    </div>
 </td>
