Remove message-deleted.html and change button in view-message.html
message-deleted.html was removed entirely from the project. In view-message.html, the reply button's JavaScript onClick action was removed to let the button function as intended.

--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -9,8 +9,7 @@
                     onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Close</button>
         </div>
         <div class="mx-3">
-            <button class="btn md-yellow-button"
-                    onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Reply</button>
+            <button class="btn md-yellow-button">Reply</button>
         </div>
     </div>
 </td>
