--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -3,13 +3,20 @@
     <p>
         {{ message.body }}
     </p>
+    <div id="reply-message"></div>
     <div class="d-flex justify-content-end">
         <div class="">
             <button class="btn md-yellow-button"
-                    onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Close</button>
+                    onClick="document.getElementById('message-row-{{ msg_id }}').innerHTML = '';">Close
+            </button>
         </div>
         <div class="mx-3">
-            <button class="btn md-yellow-button">Reply</button>
+            <button
+                    hx-get="{% url 'reply_message' 10 %}"
+                    hx-target="#reply-message"
+                    hx-swap="innerHTML"
+                    class="btn md-yellow-button">Reply
+            </button>
         </div>
     </div>
 </td>
