--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -39,7 +39,7 @@
                              hx-confirm="Are you sure you want to delete this message?"
                              hx-target="#delete-message-{{ message.id }}"
                              hx-swap="innerHTML"
-                             class="btn md-red-button">Delete</button>
+                             class="btn btn-danger btn-sm">Delete</button>
                       </td>
                   </tr>
                   {% endfor %}
