Add reply message functionality
A ReplyMessageForm and corresponding view have been introduced for handling reply messages. Appropriate modifications have been made to the related urls and templates to support this functionality. This addition aids the user in creating responses to messages directly from the view message interface.

--- a/messaging/templates/reply_message.html
+++ b/messaging/templates/reply_message.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row mb-5 justify-content-center">
         <div id="message-sent"></div>
-        <form hx-post="{% url 'new_message' user_id %}" hx-trigger="submit">
+        <form hx-post="{% url 'reply_message' msg_id user_id %}" hx-trigger="submit">
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.body }}
