--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -12,7 +12,7 @@
         </div>
         <div class="mx-3">
             <button
-                    hx-get="{% url 'reply_message' 10 %}"
+                    hx-get="{% url 'reply_message' msg_id message.from_user.id %}"
                     hx-target="#reply-message"
                     hx-swap="innerHTML"
                     class="btn md-yellow-button">Reply
