Add new 'Applications' page for recruiters
A new page has been created to display job applications for recruiters. This page includes a list of all applications, each associated with a job listing posted by the recruiter. The corresponding route has also been added and the new page can be accessed from the recruiter's navigation bar. Additionally, the previous 'Applications' section has been removed from the 'Profile' page.

--- a/website/templates/recruiter_navbar.html
+++ b/website/templates/recruiter_navbar.html
@@ -11,6 +11,9 @@
           <a class="nav-link" href="/recruiter/profile">Profile</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/recruiter/applications">Applications</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'saved_resumes' %}">Saved Resumes</a>
         </li>
         <li class="nav-item dropdown">
