Add message replies to message viewing context
This commit updates the message viewing functionality to include retrieving and displaying all replies associated with a particular message. Additionally, the user interface has been updated to differentiate between the main message and its replies, with sender details and creation dates displayed for both.

--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -12,7 +12,7 @@
                   <thead class="table-dark">
                   <tr>
                       <th scope="col">From</th>
-                      <th scope="col">Subject</th>
+                      <th scope="col">Subject / Message</th>
                       <th scope="col" class="text-center">View</th>
                       <th scope="col" class="text-center">Delete</th>
                   </tr>
