--- a/messaging/templates/messages/view-message.html
+++ b/messaging/templates/messages/view-message.html
@@ -1,8 +1,18 @@
 <td>
     <hr />
     <p>
+        <strong>{{ message.from_user.first_name }} {{ message.from_user.last_name }}</strong>
+        {{ message.created_at|date:"m/d/Y" }}<br />
         {{ message.body }}
     </p>
+        {% for reply in replies %}
+            <p>
+                <hr />
+                <strong>{{ reply.from_user.first_name }} {{ reply.from_user.last_name }}</strong>
+                {{ reply.created_at|date:"m/d/Y" }}<br />
+                {{ reply.body }}
+            </p>
+        {% endfor %}
     <div id="reply-message"></div>
     <div class="d-flex justify-content-end">
         <div class="">
