Implement read message status update
The code changes mainly address the read status update of messages. Now, when a user replies to a message, the main message's read status is set to False, showing that a new message has arrived. Similarly, when a user views a message, the read status of both the message and its replies are set to True. For visual indication on the user interface, a "View" button for read messages and a "Read" button for unread messages have been added

--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -26,12 +26,25 @@
                             <div id="message-row-{{ message.id }}"></div>
                       </td>
                       <td class="text-center">
-                          <button
-                                  hx-get="{% url 'view_message' message.id %}"
-                                  hx-target="#message-row-{{ message.id }}"
-                                  hx-swap="innerHTML"
-                                  class="btn md-yellow-button">View
-                          </button>
+                          {% if message.read %}
+                              <button
+                                      hx-get="{% url 'view_message' message.id %}"
+                                      hx-target="#message-row-{{ message.id }}"
+                                      hx-swap="innerHTML"
+                                      class="btn md-yellow-button">View
+                              </button>
+                          {% else %}
+                              <button
+                                      hx-get="{% url 'view_message' message.id %}"
+                                      hx-target="#message-row-{{ message.id }}"
+                                      hx-swap="innerHTML"
+                                      class="btn btn-sm btn-success">Read
+                              </button>
+                          {% endif %}
+
+
+
+
                       </td>
                       <td class="text-center">
                           <button
