--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -23,28 +23,22 @@
                       <td>{{ message.from_user.first_name }} {{ message.from_user.last_name }}</td>
                       <td>
                           {{ message.subject }}
-                            <div id="message-row-{{ message.id }}"></div>
                       </td>
                       <td class="text-center">
                           {% if message.read %}
+                          <a href="{% url 'view_message' message.id %}">
                               <button
-                                      hx-get="{% url 'view_message' message.id %}"
-                                      hx-target="#message-row-{{ message.id }}"
-                                      hx-swap="innerHTML"
                                       class="btn md-yellow-button">View
                               </button>
+                          </a>
                           {% else %}
+                          <a href="{% url 'view_message' message.id %}">
                               <button
-                                      hx-get="{% url 'view_message' message.id %}"
-                                      hx-target="#message-row-{{ message.id }}"
-                                      hx-swap="innerHTML"
+
                                       class="btn btn-sm btn-success">Read
                               </button>
+                          </a>
                           {% endif %}
-
-
-
-
                       </td>
                       <td class="text-center">
                           <button
